pub_plot/log/build_2023-04-10_10-05-05/py_plotting/stderr.log
  File "/home/quang/ros2_robotics_cpp/pub_plot/install/py_plotting/lib/python3.10/site-packages/py_plotting/sin_plotting.py", line 28
    plt.clf()s
             ^
SyntaxError: invalid syntax

